--- a/TnTComponents.Testing/TnTComponents.Server/Components/App.razor
+++ b/TnTComponents.Testing/TnTComponents.Server/Components/App.razor
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="TnTComponents.Client.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="_content/TnTComponents/style.css" />
-    <HeadOutlet />
+    <HeadOutlet @rendermode="@RenderMode.InteractiveAuto" />
 </head>
 
 <body theme="default">
