--- a/TnTComponents/Forms/TnTDatePicker.razor
+++ b/TnTComponents/Forms/TnTDatePicker.razor
@@ -1,6 +1,6 @@
 ﻿@using System.Globalization;
 @using System.Text;
-@inherits TnTFormDialogField<DateTime>
+@inherits TnTFormDialogField<DateOnly?>
 
 <div class="@GetClass()" theme="@Theme" @ref="BoxInputReference">
     @GetIcon()
@@ -10,61 +10,64 @@
            placeholder="@Placeholder"
            @ref="InputElementReference"
            @bind="@Value"
+           @bind:format="@Format"
            @bind:event="oninput"
            @onchange="OnChange"
            @onfocusin="OnFocusAsync">
 
-    <div class="tnt-date-time-picker">
-        <span>
-            @GetArrow(true)
-            <TnTFormDropDown ListItems="_months" Theme="@Theme" AllowClear=false FormType="FormType" IconType="IconType" Label="Month" @bind-Value="_selectedMonth" ValueCallback="@DateTimeFormatInfo.CurrentInfo.GetMonthName">
-                <ListItemTemplate>
-                    @DateTimeFormatInfo.CurrentInfo.GetMonthName(context)
-                </ListItemTemplate>
-            </TnTFormDropDown>
-            <TnTFormDropDown ListItems="_years" Theme="@Theme" AllowClear=false FormType="FormType" IconType="IconType" Label="Year" @bind-Value="_selectedYear" />
-            @GetArrow(false)
-        </span>
-        <table>
-            <thead>
-                <tr>
-                    @foreach (var day in DateTimeFormatInfo.CurrentInfo.AbbreviatedDayNames) {
-                        <th>
-                            @day
-                        </th>
-                    }
-                </tr>
-            </thead>
-            <tbody>
-                @{
-                    var date = GetStartDate();
-                }
-                @for (var i = 0; i < 6; ++i) {
+    @if (Active) {
+        <TnTExternalClickHandler class="tnt-date-time-picker" Callback="Deactivate">
+            <span>
+                @GetArrow(true)
+                <TnTFormDropDown ListItems="_months" Theme="@Theme" AllowClear=false FormType="FormType" IconType="IconType" Label="Month" @bind-Value="_selectedMonth" ValueCallback="@DateTimeFormatInfo.CurrentInfo.GetMonthName" class="tnt-month-picker">
+                    <ListItemTemplate>
+                        @DateTimeFormatInfo.CurrentInfo.GetMonthName(context)
+                    </ListItemTemplate>
+                </TnTFormDropDown>
+                <TnTFormDropDown ListItems="_years" Theme="@Theme" AllowClear=false FormType="FormType" IconType="IconType" Label="Year" @bind-Value="_selectedYear" class="tnt-year-picker" />
+                @GetArrow(false)
+            </span>
+            <table>
+                <thead>
                     <tr>
-                        @for (var j = 0; j < 7; ++j, date = date.AddDays(1)) {
-                            var itemDate = date;
-                            <td class="@GetDateItemClass(itemDate)">
-                                @itemDate.Day
-                            </td>
+                        @foreach (var day in DateTimeFormatInfo.CurrentInfo.AbbreviatedDayNames) {
+                            <th>
+                                @day.First()
+                            </th>
                         }
                     </tr>
-                }
-            </tbody>
-        </table>
-    </div>
+                </thead>
+                <tbody>
+                    @{
+                        var date = GetStartDate();
+                    }
+                    @for (var i = 0; i < 6; ++i) {
+                        <tr>
+                            @for (var j = 0; j < 7; ++j, date = date.AddDays(1)) {
+                                var itemDate = date;
+                                <td @onclick="@(() => SelectDate(itemDate))" @onclick:stopPropagation="true">
+                                    <div class="@GetDateItemClass(itemDate)">
+                                        @itemDate.Day
+                                    </div>
+                                </td>
+                            }
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </TnTExternalClickHandler>
+    }
 
-    @*
-    @if (AllowClear) {
-    @GetClearIcon()
+    @if (AllowClear && Value.HasValue) {
+        @GetClearIcon()
     }
     @GetCalendarIcon()
 
     @if (!string.IsNullOrWhiteSpace(Label)) {
-    <label class="tnt-input-field-label @(!string.IsNullOrWhiteSpace(Placeholder) || !string.IsNullOrWhiteSpace(Icon) ? "placeholder" : string.Empty) @(Active ? "active" : string.Empty)">
-    @Label
-    </label>
+        <label class="tnt-input-field-label @(!string.IsNullOrWhiteSpace(Placeholder) || !string.IsNullOrWhiteSpace(Icon) ? "placeholder" : string.Empty) @(Active || Value.HasValue ? "active" : string.Empty)">
+            @Label
+        </label>
     }
-    *@
 </div>
 
 @if (!string.IsNullOrWhiteSpace(HelperText)) {
@@ -73,14 +76,16 @@
 
 @code {
     [Parameter]
-    public DateTime StartDate { get; set; } = DateTime.Today;
+    public DateOnly StartDate { get; set; } = DateOnly.FromDateTime(DateTime.Today);
 
     [Parameter]
-    public int MinYear { get; set; } = DateTime.Now.Year - 1;
+    public DateOnly MinDate { get; set; } = DateOnly.FromDateTime(DateTime.Now.AddYears(-50));
 
     [Parameter]
-    public int MaxYear { get; set; } = DateTime.Now.Year + 1;
+    public DateOnly MaxDate { get; set; } = DateOnly.FromDateTime(DateTime.Now.AddYears(50));
 
+    [Parameter]
+    public IReadOnlySet<DateOnly> DisabledDates { get; set; } = new HashSet<DateOnly>();
 
     protected override string InputType => "text";
 
@@ -89,24 +94,55 @@
     private int _selectedMonth { get => _currentMonthYear.Month; set => _currentMonthYear = new DateOnly(_selectedYear, value, 1); }
     private int _selectedYear { get => _currentMonthYear.Year; set => _currentMonthYear = new DateOnly(value, _selectedMonth, 1); }
 
-    private ICollection<int> _months = default!;
+    private ICollection<int> _months = Enumerable.Range(1, 12).ToArray();
     private ICollection<int> _years = default!;
 
     protected override void OnInitialized() {
+        if (StartDate < MinDate) {
+            throw new ArgumentException($"{nameof(StartDate)} cannot be less then {nameof(MinDate)}");
+        }
+
+        if (StartDate > MaxDate) {
+            throw new ArgumentException($"{nameof(StartDate)} cannot be greater then {nameof(MaxDate)}");
+        }
+
+
         _selectedMonth = StartDate.Month;
         _selectedYear = StartDate.Year;
-        _months = Enumerable.Range(1, 12).ToArray();
-        _years = Enumerable.Range(MinYear, MaxYear - MinYear).ToArray();
+
+        _years = Enumerable.Range(MinDate.Year, (MaxDate.Year - MinDate.Year) + 1).ToArray();
+
+        if (string.IsNullOrWhiteSpace(Format)) {
+            Format = "yyyy-MM-dd";
+        }
+
         base.OnInitialized();
     }
-
 
     protected override string GetClass() {
         return $"{base.GetClass()} date-picker";
     }
 
-    protected override Task OnChange(ChangeEventArgs e) {
-        throw new NotImplementedException();
+    protected override async Task OnChange(ChangeEventArgs e) {
+        await ValueChanged.InvokeAsync((DateOnly?)e?.Value);
+    }
+
+    private async Task SelectDate(DateOnly selectedDate) {
+        if (selectedDate >= MinDate && selectedDate <= MaxDate && !DisabledDates.Contains(selectedDate)) {
+            if (selectedDate.Month == _currentMonthYear.Month && selectedDate.Year == _currentMonthYear.Year) {
+                Value = selectedDate;
+                _currentMonthYear = new DateOnly(selectedDate.Year, selectedDate.Month, 1);
+                await OnChange(new ChangeEventArgs { Value = Value });
+            }
+            else if (selectedDate < _currentMonthYear) {
+                PrevPage();
+                return;
+            }
+            else if (selectedDate > _currentMonthYear) {
+                NextPage();
+                return;
+            }
+        }
     }
 
     private DateOnly GetStartDate() {
@@ -116,32 +152,40 @@
 
     private void NextPage() {
         var nextMonth = _currentMonthYear.AddMonths(1);
-        if (nextMonth.Year <= MaxYear) {
-            _selectedMonth = nextMonth.Month;
-            _selectedYear = nextMonth.Year;
+        var nextMonthPage = new DateOnly(nextMonth.Year, nextMonth.Month, 1);
+        if (nextMonth <= MaxDate) {
+            _currentMonthYear = nextMonth;
         }
     }
 
     private void PrevPage() {
         var prevMonth = _currentMonthYear.AddMonths(-1);
-        if (prevMonth.Year >= MinYear) {
-            _selectedMonth = prevMonth.Month;
-            _selectedYear = prevMonth.Year;
+        var prevPageDate = new DateOnly(prevMonth.Year, prevMonth.Month, DateTime.DaysInMonth(prevMonth.Year, prevMonth.Month));
+        if (prevPageDate >= MinDate) {
+            _currentMonthYear = prevMonth;
         }
     }
 
     private string GetDateItemClass(DateOnly date) {
-        var strBuilder = new StringBuilder();
-        if(date == DateOnly.FromDateTime(DateTime.Today)) {
+        var strBuilder = new StringBuilder("table-content ");
+        if (date == DateOnly.FromDateTime(DateTime.Today)) {
             strBuilder.Append("current-date ");
         }
 
-        if(date.Month != _currentMonthYear.Month) {
+        if (date.Month != _currentMonthYear.Month) {
             strBuilder.Append("out-of-month ");
         }
 
+        if (Value.HasValue && date == Value.Value) {
+            strBuilder.Append("selected ");
+        }
+
+        if (date > MaxDate || date < MinDate || DisabledDates.Contains(date)) {
+            strBuilder.Append("disabled ");
+        }
+
         return strBuilder.ToString();
-    } 
+    }
 
     private RenderFragment GetCalendarIcon() {
         switch (IconType) {
@@ -159,8 +203,8 @@
     private RenderFragment GetArrow(bool left) {
         var disabled = string.Empty;
 
-        if ((left && _selectedMonth == 1 && _selectedYear == MinYear) ||
-            (!left && _selectedMonth == 12 && _selectedYear == MaxYear)) {
+        if ((left && _selectedMonth == 1 && _selectedYear == MinDate.Year) ||
+            (!left && _selectedMonth == 12 && _selectedYear == MaxDate.Year)) {
             disabled = "disabled";
         }
 
@@ -187,5 +231,4 @@
                 throw new NotImplementedException();
         }
     }
-
 }
