--- a/TnTComponents/Forms/TnTDatePicker.razor
+++ b/TnTComponents/Forms/TnTDatePicker.razor
@@ -10,7 +10,7 @@
            placeholder="@Placeholder"
            @ref="InputElementReference"
            @bind="@Value"
-           @bind:format="@Format"
+           @bind:format="@(Format ?? string.Empty)"
            @bind:event="oninput"
            @onchange="OnChange"
            @onfocusin="OnFocusAsync">
@@ -90,10 +90,8 @@
     protected override string InputType => "text";
 
     private DateOnly _currentMonthYear;
-
     private int _selectedMonth { get => _currentMonthYear.Month; set => _currentMonthYear = new DateOnly(_selectedYear, value, 1); }
     private int _selectedYear { get => _currentMonthYear.Year; set => _currentMonthYear = new DateOnly(value, _selectedMonth, 1); }
-
     private ICollection<int> _months = Enumerable.Range(1, 12).ToArray();
     private ICollection<int> _years = default!;
 
@@ -105,7 +103,6 @@
         if (StartDate > MaxDate) {
             throw new ArgumentException($"{nameof(StartDate)} cannot be greater then {nameof(MaxDate)}");
         }
-
 
         _selectedMonth = StartDate.Month;
         _selectedYear = StartDate.Year;
@@ -145,11 +142,6 @@
         }
     }
 
-    private DateOnly GetStartDate() {
-        var startDate = new DateTime(_currentMonthYear.Year, _currentMonthYear.Month, 1);
-        return DateOnly.FromDateTime(startDate.AddDays(-(double)startDate.DayOfWeek));
-    }
-
     private void NextPage() {
         var nextMonth = _currentMonthYear.AddMonths(1);
         var nextMonthPage = new DateOnly(nextMonth.Year, nextMonth.Month, 1);
@@ -164,6 +156,11 @@
         if (prevPageDate >= MinDate) {
             _currentMonthYear = prevMonth;
         }
+    }
+
+    private DateOnly GetStartDate() {
+        var startDate = new DateTime(_currentMonthYear.Year, _currentMonthYear.Month, 1);
+        return DateOnly.FromDateTime(startDate.AddDays(-(double)startDate.DayOfWeek));
     }
 
     private string GetDateItemClass(DateOnly date) {
