Fixed styling to be easier to setup

--- a/TnTComponents/Styles/Common/_default_theme.dark.scss
+++ b/TnTComponents/Styles/Common/_default_theme.dark.scss
@@ -1,3 +1,4 @@
+@import '_functions.scss';
 @import '_default_colors_tokens.scss';
 @import '_default_typeography.scss';
 $tnt-color-primary: $tnt-color-primary-dark;
