--- a/TnTComponents/Styles/Components/forms/_textbox.scss
+++ b/TnTComponents/Styles/Components/forms/_textbox.scss
@@ -1,8 +1,15 @@
 .tnt-input-field[theme=default] {
     border-bottom-color: $tnt-color-outline;
 
-    i {
-        color: $tnt-color-on-primary-container;
+    ::placeholder {
+        color: color.adjust($tnt-color-on-surface, $alpha: -0.6);
+    }
+
+    &:not(.disabled) {
+        i:not(.tnt-icon-component) {
+            color: $tnt-color-on-surface;
+            @include colorizeTransparent($tnt-color-surface, $hover:true, $active:true);
+        }
     }
 
     input {
@@ -11,6 +18,10 @@
 
     & > .tnt-input-field-label {
         color: $tnt-color-on-primary-container;
+    }
+
+    + .helper-text {
+        color: $tnt-color-on-surface;
     }
 
     &.disabled {
@@ -27,8 +38,11 @@
         & > .tnt-input-field-label {
             color: color.adjust($tnt-color-on-primary-container, $alpha: -0.6);
         }
-    }
 
+        + .helper-text {
+            color: color.adjust($tnt-color-on-surface, $alpha: -0.6);
+        }
+    }
 
     &.active {
         border-bottom-color: $tnt-color-primary;
@@ -62,8 +76,12 @@
         background-color: $tnt-color-primary-container;
 
         &.disabled {
-            background-color: color.adjust($tnt-color-on-primary-container, $alpha: -0.7);
+            background-color: color.adjust($tnt-color-primary-container, $alpha: -0.5);
         }
+    }
+
+    .tnt-password-reveal {
+        @include colorizeTransparent($tnt-color-on-surface, $hover:true, $active:true);
     }
 }
 
@@ -161,7 +179,6 @@
     }
 
     .tnt-password-reveal {
-        background-color: transparent;
         visibility: hidden;
         display: flex;
         flex-direction: column;
@@ -169,16 +186,6 @@
         align-items: center;
         border: none;
         padding: 0;
-
-
-
-        &:hover {
-            background-color: #00000022;
-        }
-
-        &:active {
-            background-color: #00000044;
-        }
 
         & > i {
             font-size: 1.5rem;
@@ -191,5 +198,11 @@
 
     &:hover .tnt-password-reveal {
         visibility: visible;
+    }
+
+    + .helper-text {
+        font-size: .8rem;
+        padding-left: 1rem;
+        transform: translateY(-1rem);
     }
 }
