--- a/TnTComponents/Styles/Components/_sidenav.scss
+++ b/TnTComponents/Styles/Components/_sidenav.scss
@@ -1,4 +1,17 @@
-﻿.tnt-sidebar-transition {
+﻿.tnt-sidebar[theme=default] {
+    background-color: $tnt-color-secondary-container;
+
+    li > a {
+        color: $tnt-color-on-secondary-container;
+        
+    }
+}
+
+.tnt-sidebar-button[theme=default] {
+    color: $tnt-color-on-primary;
+}
+
+.tnt-sidebar-transition {
     transition: transform ease-in-out 150ms;
 }
 
@@ -41,12 +54,17 @@
             font-weight: bold;
             text-decoration: none;
             vertical-align: top;
+            font-size: 1.1rem;
+            height: 3.25rem;
+            line-height: 3.25rem;
+            padding: 0 (1.2rem * 2);
 
             > i,
             > i.material-icons {
                 float: left;
                 padding-right: 1rem;
-                line-height: 3rem;
+                line-height: 3.25rem;
+                margin: 0 (1.2rem * 2) 0 0;
             }
 
             > i.material-icons {
@@ -83,26 +101,4 @@
 
 .tnt-sidebar-button {
     cursor: pointer;
-}
-
-.tnt-sidebar[theme=default] {
-    background-color: $tnt-color-secondary-container;
-
-    li > a {
-        color: $tnt-color-on-secondary-container;
-        font-size: 1.1rem;
-        height: 3.25rem;
-        line-height: 3.25rem;
-        padding: 0 (1.2rem * 2);
-
-        & > i,
-        & > i.material-icons {
-            line-height: 3.25rem;
-            margin: 0 (1.2rem * 2) 0 0;
-        }
-    }
-}
-
-.tnt-sidebar-button[theme=default] {
-    color: $tnt-color-on-primary;
 }
